# packy

./: .flake8  .pylintrc  README.md  install_requirements.py  main.py  pyproject.toml  requirements.txt  run_game.py
packy/: __init__.py  __main__.py  cli.py  collision_system.py  context.py  coordinate.py  coordinate_system.py  drawable.py  engine.py  event_handler.py  game_object.py  game_state.py  key_system.py  mouse_system.py  scene.py  scene_manager.py  settings.py  shape.py  shape_types.py  update.py  vector.py
packy/game_objects/: __init__.py  background.py  button.py  character.py  lives.py  package.py  package_mount.py  rectangle.py  score.py  status_bar.py  text.py
packy/scenes/: __init__.py  game.py  game_over.py  menu.py
packy/shapes/: __init__.py  box.py
tests/: test_vector.py
