[tool.poetry]
name = "game"
version = "0.0.0"
description = ""
authors = ["Arwed Mett <arwed@amazon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.3.1"
coverage = "^7.2.5"
mypy = "^1.3.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
