[tool.poetry]
name = "game"
version = "0.0.0"
description = ""
authors = ["Arwed Mett <arwed@amazon.com>"]
readme = "README.md"
packages = [
	{ include = "packy" }
]

[tool.poetry.scripts]
packy = "packy.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.7"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.3.1"
coverage = "^7.2.5"
mypy = "^1.3.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
