[tool.poetry]
name = "game"
version = "0.0.0"
description = ""
authors = ["Arwed Mett <arwed@amazon.com>"]
readme = "README.md"
packages = [
	{ include = "packy" }
]

[tool.poetry.scripts]
packy = "packy.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.7"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.3.1"
coverage = "^7.2.5"
mypy = "^1.3.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.poetry_hooks]
post_build = "test"

[tool.poe.tasks.test]
sequence = ["mypy", "lint", "unit"]

[tool.poe.tasks.mypy]
cmd = "poetry run mypy packy"

[tool.poe.tasks.lint]
sequence = ["flake8", "pylint"]

[tool.poe.tasks.flake8]
cmd = "poetry run flake8"

[tool.poe.tasks.pylint]
cmd = "poetry run pylint packy"

[tool.poe.tasks.unit]
cmd = "poetry run coverage run -m pytest"
